Cleaned pom and removed spring dependencies.